--- a/src/components/video/styles.css
+++ b/src/components/video/styles.css
@@ -33,4 +33,5 @@
     position: absolute;
     top: 1rem;
     right: 1rem;
+    z-index: 103;
 }
